--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
     <!-- Header & Navigation -->
     <header id="header" class="bg-white/80 backdrop-blur-md shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-teal-700">Puspendu Biswas Paul</a>
+            <a href="#" class="text-2xl font-bold text-teal-700 flex items-center gap-2">
+                <img src="https://placehold.co/32x32?text=Logo" alt="Logo" class="h-8 w-8 rounded-full"> <!-- Replace with your logo URL -->
+                Puspendu Biswas Paul
+            </a>
             <div class="hidden md:flex space-x-6">
                 <a href="#about" class="nav-link text-gray-600 hover:text-teal-600 transition duration-300">About</a>
                 <a href="#skills" class="nav-link text-gray-600 hover:text-teal-600 transition duration-300">Skills</a>
@@ -99,6 +102,7 @@
 
         <!-- About Section -->
         <section id="about" class="mb-24 text-center">
+            <img src="https://placehold.co/128x128?text=Profile" alt="Puspendu Biswas Paul Profile Picture" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover"> <!-- Replace with your profile picture URL -->
             <h1 class="text-5xl md:text-6xl font-extrabold text-slate-800 mb-2 leading-tight">Puspendu Biswas Paul</h1>
             <p class="max-w-4xl mx-auto text-lg text-slate-600">
                 A highly motivated and dedicated professional with a strong background in Synthetic Aperture Radar (SAR) data, Artificial Intelligence (AI), and remote sensing. Committed to leveraging advanced technologies to address complex geospatial challenges. Expertise includes developing AI-driven models for SAR data analysis, enabling enhanced environmental monitoring and disaster management.
