--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     </footer>
 
     <!-- Floating Download CV Button -->
-    <a href="https://github.com/PaulPusp/paulresume/blob/main/Puspendu%20Biswas%20paul%20CV.pdf" download="Puspendu_Biswas_Paul_CV.pdf" class="download-fab">
+    <a href="https://drive.google.com/file/d/15AS_cMfR1QGiHcGpMS56JdR0T8Ijs7Q3/view?usp=sharing" download="Puspendu_Biswas_Paul_CV.pdf" class="download-fab">
         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 14H9V8h2v8zm4 0h-2V8h2v8z"/></svg>
         Download CV
     </a>
